--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 context.listener.classes=com.hui.web.mvc.HuiApplicationListener
-logging.file=logs/hui-train.log 
-logging.level.org.springframework=INFO
+logging.config=classpath:logback-spring.xml
+logging.path=logs
 #启用CharacterEncodingFilter请求响应编码过滤器
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
-spring.thymeleaf.cache=false
-spring.thymeleaf.searchPrefix=classpath:/web/
-spring.thymeleaf.suffix=.html
 
 #数据源配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
